# flutter_nostrdb

./: .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_nostrdb_example/: MainActivity.kt
example/assets/: data.mdb
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_nostrdb.podspec
ios/Classes/: flutter_nostrdb.c
lib/: flutter_nostrdb.dart  flutter_nostrdb_bindings_generated.dart
linux/: CMakeLists.txt
linux/flutter/ephemeral/: generated_config.cmake
macos/: flutter_nostrdb.podspec
src/: CMakeLists.txt  flutter_nostrdb.c
windows/: CMakeLists.txt
